# freeradius-client

./: .gitignore  .travis.yml  AUTHORS  BUGS  CHANGELOG  CHANGES  COPYRIGHT  Makefile.am  Makefile.in  NEWS  README  README.radexample  README.rst  acconfig.h  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  configure.lineno  mkinstalldirs  release.mak
debian/: Makefile.am  Makefile.in  README.debian  changelog  conffiles  control  copyright  dirs  docs  examples  files  freeradius-client2.install  freeradius-client2.lintian-overrides  libfreeradius-client2-dev.lintian-overrides  libfreeradius-client2.lintian-overrides  libradius-dev.install  libradius-ng-dev.files  libradius-ng.conffiles  libradius-ng.dirs  libradius-ng.postinst  radiusclient-ng.dirs  radiusclient-ng.files  radiusclient-ng.postinst  rules  watch
doc/: ChangeLog  Doxyfile.in  Makefile.am  Makefile.in  README  doc.mk  instop.html  login.example  release-method.txt
doc/man/: radcli.h.3  rc_aaa.3  rc_aaa_ctx.3  rc_aaa_ctx_free.3  rc_aaa_ctx_get_secret.3  rc_aaa_ctx_get_vector.3  rc_acct.3  rc_acct_proxy.3  rc_add_config.3  rc_add_env.3  rc_auth.3  rc_auth_proxy.3  rc_avpair_add.3  rc_avpair_assign.3  rc_avpair_free.3  rc_avpair_gen.3  rc_avpair_get.3  rc_avpair_get_attr.3  rc_avpair_get_in6.3  rc_avpair_get_raw.3  rc_avpair_get_str.3  rc_avpair_get_uint32.3  rc_avpair_insert.3  rc_avpair_log.3  rc_avpair_new.3  rc_avpair_next.3  rc_avpair_parse.3  rc_avpair_readin.3  rc_avpair_tostr.3  rc_buildreq.3  rc_check.3  rc_check_tls.3  rc_conf_int.3  rc_conf_srv.3  rc_conf_str.3  rc_config_free.3  rc_config_init.3  rc_deinit_tls.3  rc_destroy.3  rc_dict_findattr.3  (+33 more)
doc/manpages/: Makefile.am  getfuncs
doc/scripts/: getfuncs-map.pl  getfuncs.pl
etc/: Makefile.am  Makefile.in  dictionary  dictionary.ascend  dictionary.compat  dictionary.microsoft  dictionary.rfc2868  dictionary.roaringpenguin  dictionary.sip  port-id-map  radiusclient-tls.conf  radiusclient-tls.conf.in  radiusclient.conf.in  servers  servers-tls
include/: Makefile.am  Makefile.in  freeradius-client.h  includes.h  messages.h  pathnames.h  radcli.h  radiusclient-ng.h  radiusclient.h
include/radcli/: radcli.h  version.h.in
lib/: Makefile.am  Makefile.in  aaa_ctx.c  avpair.c  buildreq.c  clientid.c  config.c  dict.c  env.c  hmac.c  hmac.h  ip_util.c  libradcli.pc.in  lock.c  log.c  md5.c  md5.h  memcmp.c  nettle-hmac.c  options.h  radcli.map.in  radcli.pc.in  rc-hmac.h  rc-md5.c  rc-md5.h  sendserver.c  strcasecmp.c  strdup.c  strerror.c  tls.c  tls.h  util.c  util.h
login.radius/: Makefile.am  Makefile.in  login.radius
login.radius/migs/: Makefile.am  Makefile.in  ip-down  ip-up  login.radius
man/: Makefile.am  Makefile.in
patches/: Makefile.am  Makefile.in  README  rename.patch
rpm/: Makefile.am  Makefile.in  radiusclient-ng.spec  radiusclient.spec
src/: Makefile.am  Makefile.in  common.c  common.h  local.c  radacct.c  radembedded.c  radexample.c  radius.c  radiusclient.c  radlogin.c  radlogin.h  radstatus.c
tests/: Makefile.am  Makefile.in  README  avpair.c  basic-tests.sh  eap-tests.sh  failover-tests.sh  ipv6-tests.sh  radiusclient-ipv6.conf  radiusclient-tcp.conf  radiusclient.conf  run-server.sh  servers  servers-ipv6  tcp-tests.sh  tls-restart.c  tls-tests.sh
tests/docker/: Dockerfile-radius  Makefile.am  Makefile.in  freeradius-users  radius-clients.conf  tls.conf
tests/dtls/: clicert.pem  clikey.pem  radiusclient-tls.conf  radsecproxy.conf
