# 
#  $Id: Makefile.am,v 1.3 2006/03/14 17:14:27 janakj Exp $
# 
#  Copyright (C) 1997 Lars Fenneberg
# 
#  See the file COPYRIGHT for the respective terms and conditions. 
#  If the file is missing contact me at lf@elemental.net 
#  and I'll send you a copy.
# 
#

AUTOMAKE_OPTIONS = foreign

INCLUDES = -D_GNU_SOURCE

ACLOCAL = @ACLOCAL@
LTLIBOBJS = @LTLIBOBJS@

SUBDIRS = include lib src etc man doc login.radius rpm tests
EXTRA_DIST = BUGS CHANGES COPYRIGHT README.rst README.radexample

CLEANFILES = *~
