#
# $Id: Makefile.am,v 1.1 2003/12/02 10:39:22 sobomax Exp $
#
# Copyright (C) 1995 Lars Fenneberg
#
# See the file COPYRIGHT for the respective terms and conditions. 
# If the file is missing contact me at lf@elemental.net 
# and I'll send you a copy.
#

AUTOMAKE_OPTIONS = foreign

CLEANFILES = *~
