#
# Copyright (C) 1997 Lars Fenneberg
#
# See the file COPYRIGHT for the respective terms and conditions. 
# If the file is missing contact me at lf@elemental.net 
# and I'll send you a copy.
#

CLEANFILES = *~

EXTRA_DIST = README merit-2.4.21-CHAP.diff radiusd-1.16.shadow.diff \
	radiusd-1.16.accounting.diff
