# 
#  $Id: Makefile.am,v 1.1 2004/11/17 13:13:42 janakj Exp $
# 
#  Copyright (C) 1997 Lars Fenneberg
# 
#  See the file COPYRIGHT for the respective terms and conditions. 
#  If the file is missing contact me at lf@elemental.net 
#  and I'll send you a copy.
# 
#

AUTOMAKE_OPTIONS = foreign

EXTRA_DIST = radiusclient-ng.spec
